UI improvements + Early Saving

--- a/LumikitApp/LumikitWindow.axaml
+++ b/LumikitApp/LumikitWindow.axaml
@@ -1,7 +1,7 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         x:Class="LumikitApp.LumikitWindow"
-        Width="1000" Height="400"
+        Width="800" Height="450"
         Background="Black"
         Title="Lumikit">
 
@@ -13,6 +13,9 @@
 			<Button Name="ResumeTrackButton" Content="Resume" Width="80"/>
 			<Button Name="NextTrackButton" Content="Next" Width="80"/>
 			<TextBlock Name="StopwatchLabel" Foreground="White" VerticalAlignment="Center" Margin="20,0,0,0"/>
+			<TextBlock Text="BPM:" Foreground="White" VerticalAlignment="Center" Margin="20,0,0,0"/>
+			<TextBox Name="BpmInput" Width="60" Text="120" />
+			<Button Name="SaveTrackDataButton" Content="Save" Width="80"/>
 		</StackPanel>
 
 		<!-- Track Info -->
@@ -23,12 +26,18 @@
 
 		<!-- Timeline + Color Palette -->
 		<DockPanel Grid.Row="2" Margin="0,10,0,0">
-			<ScrollViewer Name="TimelineScrollViewer" HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Disabled" DockPanel.Dock="Top" Height="100">
-				<Canvas Name="TimelineCanvas" Height="60"/>
+			<ScrollViewer Name="TimelineScrollViewer"
+                          HorizontalScrollBarVisibility="Visible"
+                          VerticalScrollBarVisibility="Disabled"
+                          DockPanel.Dock="Top"
+                          Height="100">
+				<Canvas Name="TimelineCanvas" Height="80"/>
 			</ScrollViewer>
 
-			<WrapPanel Name="ColorPalette" Orientation="Horizontal" Margin="0,10,0,0" DockPanel.Dock="Bottom" Height="40"/>
+			<WrapPanel Name="ColorPalette" Orientation="Horizontal"
+                       Margin="0,10,0,0"
+                       DockPanel.Dock="Bottom"
+                       Height="40"/>
 		</DockPanel>
-
 	</Grid>
 </Window>
